--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "devDependencies": {
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-react": "^7.13.0",
     "husky": "^2.3.0",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1"
   },
   "keywords": [
     "gatsby"
