--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-sharp": "^2.1.19",
+    "modern-normalize": "^0.5.0",
     "peerjs": "^1.0.0",
     "pretty-quick": "^1.11.0",
     "prop-types": "^15.7.2",
@@ -24,6 +25,7 @@
     "@commitlint/cli": "^7.6.1",
     "@commitlint/config-conventional": "^7.6.0",
     "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "husky": "^2.3.0",
     "prettier": "^1.17.1",
