--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "typeface-nanum-pen-script": "0.0.63",
+    "wired-elements": "^1.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.6.1",
