--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "husky": "^2.3.0",
     "prettier": "^1.17.1",
     "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1"
+    "prettier-eslint-cli": "^4.7.1",
+    "styled-components": "^4.4.0"
   },
   "keywords": [
     "gatsby"
@@ -45,7 +46,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0 -p 8000",
+    "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
