--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@svgr/webpack": "^4.3.3",
     "framer-motion": "^1.6.15",
     "gatsby": "^2.5.7",
     "gatsby-image": "^2.1.0",
@@ -12,6 +13,7 @@
     "gatsby-plugin-offline": "^3.0.16",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
+    "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-sharp": "^2.1.19",
     "modern-normalize": "^0.5.0",
@@ -21,6 +23,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-textarea-autosize": "^7.1.2",
     "share-api-polyfill": "^1.0.11",
     "typeface-nanum-pen-script": "0.0.63",
     "wired-elements": "^1.0.0"
